--- a/public/style.css
+++ b/public/style.css
@@ -6,16 +6,25 @@ a {
   text-decoration: none;
 }
 
-label {
+/* label {
   display: block;
-}
+} */
 
 nav a {
-  display: inline-block;
-  margin: 1em;
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 10px;
 }
 
-form div {
+nav a :hover {
+  color: pink;
+  /* text-decoration: none;
+  text-transform: uppercase;
+  padding: 10px; */
+}
+
+/* form div {
   margin: 1em;
   display: inline-block;
-}
+} */
